syntax = "proto3";

option java_multiple_files = true;
option java_package = "dev.maynestream.ledgify.account";
option java_outer_classname = "AccountProto";

import "buf/validate/validate.proto";

service Account {
  rpc CreateAccount(CreateAccountRequest) returns (CreateAccountResponse);
  rpc ListAccounts(ListAccountsRequest) returns (ListAccountsResponse);
}

message CreateAccountRequest {
  string customer_id = 1 [(buf.validate.field).string.uuid = true];
  int32 ledger_id = 2 [(buf.validate.field).int32.gt = 0];
  string currency = 3 [(buf.validate.field).string.len = 3];
}

message CreateAccountResponse {
  string account_id = 1 [(buf.validate.field).string.uuid = true];
}

message ListAccountsRequest {
  string customer_id = 1 [(buf.validate.field).string.uuid = true];
}

message ListAccountsResponse {
  message Account {
    string account_id = 1 [(buf.validate.field).string.uuid = true];
    int32 ledger_id = 2 [(buf.validate.field).int32.gt = 0];
    string currency = 3 [(buf.validate.field).string.len = 3];
    string balance = 4 [(buf.validate.field) = {string: {pattern: "^[\\d]+[\\.]?[\\d]*$"}, ignore_empty: false}];
  }

  string customer_id = 1 [(buf.validate.field).string.uuid = true];
  repeated Account accounts = 2;
}
